2002-08-10  Max Horn  <max@quendi.de>

	* SelfUpdate.pm: Only force a second rebuild of the package database, and 
	  also only restart Fink if the package manager is being updated.

2002-08-05  Max Horn  <max@quendi.de>

	* Engine.pm (cmd_cleanup): Improved the "fink cleanup" command to also clean
	  files in /sw/src (only files not directories - removing directories in 
	  /sw/src is dangerous as it can interupt running builds etc.)

	* Mirror.pm: Don't use mirror timestamp as a mirror (Bug #563182).

2002-08-04  Max Horn  <max@quendi.de>

	* Config.pm, Configure.pm: Fixed verbosity level selection.

	* PkgVersion.pm: Patch #588476 (Java support) by Sylvain Cuaz.

	* Fixed bug #548373 (package DB read thrice). It is not only read twice
	  (the new package manager may support new features, and thus must rebuild
	  the database once more)

	* Engine.pm: Patch #588705: Automates passing on the options
	  (by Sylvain Cuaz)

2002-08-03  Max Horn  <max@quendi.de>

	* Services.pm: Fixed read_properties_multival, it was broken by the
	  RuntimeVars patch.

	* PkgVersion.pm, Services.pm: Patch #579210: RuntimeVars field added
	  (thanks to Sylvain Cuaz for this)

2002-07-31  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Small fix to Configure.pm for the verbosity level selection,
	  which was reported not working. Should be fine now.

2002-07-28  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Added /sbin and /usr/sbin to the clean env since some pkgs need
	  stuff like chown or chmod to install properly.

2002-07-26  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Changed spacing in fink list easier to use with awk or cut
	* added a space before pkg list for better seperation of info

2002-07-26  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Services.pm: Fix for the Jag Argument "M-?M-^?M-X" isn't numeric
	  in numeric eq (==) at /sw/lib/perl5/Fink/Engine.pm line 330, <SW_VERS>